[package]
name = "is-awesome"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
glean = "50.1.2"
fog = { version = "0.1.0", optional = true }

[build-dependencies]
glean-build = { git = "https://github.com/mozilla/glean", rev = "96309315ae8cfebb18a00881040fded11db2e96f", version = "6.1.1" }

[features]
default = []
gecko = ["fog"]

[patch.crates-io]
fog = { path = "fog" }

[workspace]

members = [
  ".",
  "fog",
]
